# openscad_test

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: example.scadtest
src/openscad_test/: __init__.py  main.py  parser.py  runner.py
tests/: test_openscad_test.py
