[project]
name = "openscad-test"
version = "1.0.1"
description = "A testing framework for OpenSCAD scripts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BelfrySCAD"},
]
keywords = ["openscad", "testing", "3d", "cad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "openscad-runner>=1.2.2",
]

[project.scripts]
openscad-test = "openscad_test.main:main"

[project.urls]
Homepage = "https://github.com/BelfrySCAD/openscad_test"
Repository = "https://github.com/BelfrySCAD/openscad_test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openscad_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
src = ["src"]
